# il2cpp-bridge-wrs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: api-reference.md  architecture.md  core-workflows.md  getting-started.md  platform-support.md
src/: config.rs  init.rs  lib.rs  logger.rs
src/api/: mod.rs
src/api/core/: api.rs  cache.rs  internals.rs  mod.rs
src/api/core/runtime/: caller.rs  mod.rs  thread.rs
src/api/debugging/: cs.rs  mod.rs
src/api/wrappers/: application.rs  mod.rs  time.rs
src/memory/: mod.rs  rw.rs
src/memory/info/: image.rs  mod.rs  symbol.rs
src/structs/: mod.rs  ptr.rs
src/structs/collections/: array.rs  dictionary.rs  list.rs  mod.rs  string.rs
src/structs/components/: mod.rs
src/structs/components/animation/: animator.rs  mod.rs
src/structs/components/core/: component.rs  game_object.rs  mod.rs  mono_behaviour.rs  transform.rs  unity_object.rs
src/structs/components/physics/: collider.rs  layer_mask.rs  mod.rs  physics.rs  rigidbody.rs
src/structs/components/rendering/: camera.rs  material.rs  mod.rs  renderer.rs  screen.rs  shader.rs
src/structs/components/scene/: mod.rs  scene_management.rs
src/structs/core/: mod.rs
src/structs/core/hierarchy/: class.rs  mod.rs  object.rs  type.rs  value_type.rs
src/structs/core/hierarchy/type_fmt/: mod.rs  parse.rs
src/structs/core/members/: field.rs  method.rs  mod.rs  property.rs
src/structs/core/metadata/: assembly.rs  image.rs  mod.rs
src/structs/core/runtime/: coroutine.rs  mod.rs
src/structs/math/: math.rs  mod.rs
