[package]
name = "il2cpp_resolver_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1"
dashmap = "6"
rustc-hash = "2"
zip = "8.2.0"
glam = "0.32.1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_LibraryLoader"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
overflow-checks = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dev_release)'] }
